# fabgitops

./: .gitignore  Cargo.toml  Dockerfile.mock-plc  Dockerfile.operator  README.md  ci-local.sh  demo.sh  docker-compose.yml  fabgitops-complete-project.md  fabgitops-master-file.md  prometheus.yml
.github/workflows/: ci.yaml
charts/fabgitops/: Chart.yaml  values.yaml
charts/fabgitops/templates/: _helpers.tpl  crd.yaml  dashboard-configmap.yaml  deployment.yaml  rbac.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
crates/fabctl/: Cargo.toml
crates/fabctl/src/: commands.rs  k8s_client.rs  main.rs  output.rs
crates/mock-plc/: Cargo.toml
crates/mock-plc/src/: chaos.rs  main.rs  server.rs
crates/operator/: Cargo.toml
crates/operator/src/: controller.rs  crd.rs  lib.rs  main.rs  metrics.rs  plc_client.rs
docs/: ARCHITECTURE.md
docs/adr/: 001-why-rust-operator.md  002-modbus-tcp-strategy.md
docs/grafana-dashboards/: dashboard.yml  fabgitops-dashboard.json
k8s/: crd.yaml  deployment-local.yaml  deployment.yaml  mock-plc.yaml  rbac.yaml  sample-plc.yaml
