[package]
name = "mock-plc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tokio-modbus = { version = "0.9", default-features = false, features = ["tcp", "tcp-server"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
